# open-gpu-server

./: .gitignore  Makefile  README.md  TOS.md  conda-forge-users.json  docs.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-images-ssh.yml  build-vm-images.yml  openstack.yml  usernames.yml
access/: conda-forge-users.json
docs/: README.md  cirun.md  images.md  network.md  openstack.md
vm-images/: .cirun.yml  README.md  build-image.sh  cpu-image.yaml  gpu-image.yaml  pyproject.toml  requirements.txt  ubuntu24-system-requirements.txt
vm-images/elements/cuda/post-install.d/: 05-cuda-install
vm-images/elements/misc/: package-installs.yaml
vm-images/elements/misc/post-install.d/: 01-install-misc
