[project]
name = "vm-images"
version = "0.1.0"
description = "VM image builder for OpenStack GPU server"
requires-python = ">=3.10"
dependencies = [
    "diskimage-builder==3.40.0",
    "python-openstackclient==6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
